--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,7 +2,15 @@
   text-align: center;
   max-width: 100vw;
 }
-a:link { text-decoration: none; }
-a:visited { text-decoration: none; }
-a:hover { text-decoration: none; }
-a:active { text-decoration: none; }
+
+.link_class {
+  color: #ffffff;
+  text-decoration: none;
+  
+}
+.link_class:hover {
+  color: #f52626;
+  text-decoration: none;
+  transition: 0.5s;
+  
+}
